Add style to navigation item About-Us

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<nav>
 					<div class="navigation">
 						<ol class="navigation-list">
-							<li class="inactive-navigation-item" title="Sorry! You can't click me. :-(">About Us</li>
+							<li class="navigation-item" title="Sorry! You can't click me. :-(">About Us</li>
 							<li class="navigation-item" id="offer"><a href="#" class="link">Offer</a></li>
 							<li class="navigation-item" id="contact"><a href="#" class="link">Contact</a></li>
 						</ol>
