--- a/designers/steve-jobs.html
+++ b/designers/steve-jobs.html
@@ -40,7 +40,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna"
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../"
                                     class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
@@ -82,7 +82,7 @@
                         <div class="tag" tabindex="0">Apple</div>
                     </div>
                     <div class="paragraph">
-                        <div title="Steve Jobs and Steve Wozniak in their youth.">
+                        <div title="Steve Jobs presenting an iPhone.">
                             <img src="../img/steve-jobs2.jpg" alt="Steve Jobs presenting an iPhone."
                                 class="paragraph-image" tabindex="0">
                         </div>
