--- a/social-media-creators/kevin-systrom.html
+++ b/social-media-creators/kevin-systrom.html
@@ -39,7 +39,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna"
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../"
                                     class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
@@ -83,9 +83,9 @@
                     </div>
                     <div class="paragraph">
                         <div
-                            title="Kevin Systrom is saying something. He gesturing his left hand. Probably He is on press conference">
+                            title="Kevin Systrom in a casual polo shirt looking directly at the viewer while smiling.">
                             <img src="../img/kevin-systrom.jpg"
-                                alt="Kevin Systrom is saying something. He gesturing his left hand. Probably He is on press conference"
+                                alt="Kevin Systrom in a casual polo shirt looking directly at the viewer while smiling."
                                 class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
