--- a/cryptographers/marian-rejewski.html
+++ b/cryptographers/marian-rejewski.html
@@ -40,7 +40,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna"
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../"
                                     class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
