--- a/programmers/bill-gates.html
+++ b/programmers/bill-gates.html
@@ -40,8 +40,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../strona-glowna"
-                                    class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../" class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -64,7 +63,7 @@
                         title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                         <img src="../img/bill-gates.jpeg" class="introduction-image">
                     </div>
-                    <a href="ada-augusta-lovelace" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
+                    <a href="ada-lovelace" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
                 </div>
             </article>
             <section>
