Correction of the inactive button's styling

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 	<div class="container">
 		<header>
 			<div class="header" id="header">
-				<div class="logo" id="logo">
+				<div class="logo" id="logo" tabindex="0">
 					<i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
 				</div>
 				<nav>
 					<div class="navigation">
 						<ol class="navigation-list">
-							<li class="navigation-item" title="Sorry! You can't click me. :-(">About Us</li>
+							<li class="navigation-item" id="inactive" title="Sorry! You can't click me. :-(">About Us</li>
 							<li class="navigation-item" id="offer"><a href="#" class="link">Offer</a></li>
 							<li class="navigation-item" id="contact"><a href="#" class="link">Contact</a></li>
 						</ol>
