Fixing bugs connected with JavaScript

--- a/programmers/bill-gates.html
+++ b/programmers/bill-gates.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="image-container"
                         title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
-                        <img src="../img/bill-gates.jpeg" class="introduction-image">
+                        <img src="../img/bill-gates.jpeg" class="introduction-image" alt="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                     </div>
                     <a href="ada-lovelace" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
                 </div>
@@ -133,7 +133,6 @@
 
     <script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
     <script src="../js/single-ink-with-offset.js" defer></script>
-    <script src="../js/navbar-mobile.js" defer></script>
 </body>
 
 </html>
