--- a/social-media-creators/kevin-systrom.html
+++ b/social-media-creators/kevin-systrom.html
@@ -60,7 +60,7 @@
                         <button class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
                     <div class="image-container" title="Kevin Systrom in a suit. He is smiling.">
-                        <img src="../img/kevin-systrom1.jpg" class="introduction-image">
+                        <img src="../img/kevin-systrom1.jpg" class="introduction-image" alt="Kevin Systrom in a suit. He is smiling.">
                     </div>
                     <a href="pichai-sundararajan" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
                 </div>
@@ -134,7 +134,6 @@
 
     <script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
     <script src="../js/single-ink-with-offset.js" defer></script>
-    <script src="../js/navbar-mobile.js" defer></script>
 </body>
 
 </html>
