--- a/social-media-creators/kevin-systrom.html
+++ b/social-media-creators/kevin-systrom.html
@@ -34,7 +34,7 @@
         <header>
             <div class="header" id="header">
                 <div class="logo" id="logo" tabindex="0">
-                    <i class="fas fa-atlas"></i> &nbsp; The Gallery of Remarkable People
+                    <i class="fas fa-atlas"></i> &nbsp; <h1 class="logo-name">The Gallery of Remarkable People</h1>
                 </div>
                 <nav>
                     <div class="navigation-subpage">
