--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<header>
 			<div class="header" id="header">
 				<div class="logo" id="logo" tabindex="0">
-					<i class="fas fa-atlas"></i> &nbsp; <h1 class="logo-name">The Gallery of Remarkable People</h1>
+					<i class="fas fa-atlas"></i> <h1 class="logo-name">The Gallery of Remarkable People</h1>
 				</div>
 				<nav>
 					<div class="navigation">
