--- a/designers/steve-jobs.html
+++ b/designers/steve-jobs.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 
-    <meta name="description"
-        content=" Do you know who is an American business magnate, software developer, investor, author, landowner, and philanthropist?">
-    <meta name="keywords"
-        content="famous programmers, social media creators, computer designers, cryptographers, biographies">
+    <meta name="description" content="Do you know who was an American business magnate, industrial designer, investor, and media proprietor?">
+    <meta name="keywords" content="famous programmers, social media creators, computer designers, cryptographers, biographies">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Steve Jobs Systrom - The Gallery">
@@ -22,8 +20,6 @@
     <link rel="stylesheet" href="../css/subpage-styles.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap"
-        rel="stylesheet">
 
     <!--[if lt IE 9]>
             <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
@@ -40,8 +36,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../"
-                                    class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../" class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -58,7 +53,7 @@
                             executive officer, and co-founder of Apple Inc. as well as the chairman and majority
                             shareholder of Pixar.
                         </p>
-                        <button class="learn-more-btn" id="learn-more">Learn more!</button>
+                        <button aria-label="Learn More" class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
                     <div class="image-container" title="Steve Jobs is sitting on a chair reading while using an iPad.">
                         <img src="../img/steve-jobs.jfif" class="introduction-image">
@@ -83,8 +78,7 @@
                     </div>
                     <div class="paragraph">
                         <div title="Steve Jobs presenting an iPhone.">
-                            <img src="../img/steve-jobs2.jpg" alt="Steve Jobs presenting an iPhone."
-                                class="paragraph-image" tabindex="0">
+                            <img src="../img/steve-jobs2.jpg" alt="Steve Jobs presenting an iPhone." class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Jobs and Steve Wozniak co-founded Apple in 1976 to sell Wozniak's Apple I personal computer.
@@ -99,24 +93,21 @@
             </article>
             <section>
                 <div class="newsletter" tabindex="0">
-                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i
-                            class="far fa-paper-plane"></i></span>
+                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i class="far fa-paper-plane"></i></span>
                     <div class="newsletter-email-button">
                         <div class="newsletter-email">
                             <input type="email" id="input-email" class="email-form" placeholder=" " required
                                 title="Enter your email here.">
                             <label for="input-email" class="label-email">E-mail</label>
                         </div>
-                        <button class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign
-                            Up!</button>
+                        <button aria-label="Sign Up" class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign Up!</button>
                     </div>
                 </div>
             </section>
         </main>
         <footer>
             <div class="footer">
-                <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon
-                    Hyziak</p>
+                <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon Hyziak</p>
                 <p class="social-media-icons">
                     <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook"
                             id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
@@ -133,6 +124,8 @@
 
     <script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
     <script src="../js/single-ink-with-offset.js" defer></script>
+
+	<link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </body>
 
 </html>
