--- a/programmers/bill-gates.html
+++ b/programmers/bill-gates.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 
-    <meta name="description"
-        content=" Do you know who is an American business magnate, software developer, investor, author, landowner, and philanthropist?">
-    <meta name="keywords"
-        content="famous programmers, social media creators, computer designers, cryptographers, biographies">
+    <meta name="description" content=" Do you know who is an American business magnate, software developer, investor, author, landowner, and philanthropist?">
+    <meta name="keywords" content="famous programmers, social media creators, computer designers, cryptographers, biographies">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Bill Gates - The Gallery">
@@ -22,8 +20,6 @@
     <link rel="stylesheet" href="../css/subpage-styles.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap"
-        rel="stylesheet">
 
     <!--[if lt IE 9]>
             <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
@@ -57,10 +53,9 @@
                             Corporation. During his career at Microsoft, he held the positions of chairman,
                             chief executive officer, president and chief software architect.
                         </p>
-                        <button class="learn-more-btn" id="learn-more">Learn more!</button>
+                        <button aria-label="Learn More" class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
-                    <div class="image-container"
-                        title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
+                    <div class="image-container" title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                         <img src="../img/bill-gates.jpeg" class="introduction-image" alt="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                     </div>
                     <a href="ada-lovelace" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
@@ -83,9 +78,7 @@
                     </div>
                     <div class="paragraph">
                         <div title="Bill Gates in a suit. He is smiling in a subtle way and looking to the left.">
-                            <img src="../img/bill-gates-2.jpg"
-                                alt="Bill Gates in a suit. He is smiling in a subtle way and looking to the left."
-                                class="paragraph-image" tabindex="0">
+                            <img src="../img/bill-gates-2.jpg" alt="Bill Gates in a suit. He is smiling in a subtle way and looking to the left." class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Gates was born and raised in Seattle, Washington. In 1975, he co-founded Microsoft with
@@ -99,24 +92,20 @@
             </article>
             <section>
                 <div class="newsletter" tabindex="0">
-                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i
-                            class="far fa-paper-plane"></i></span>
+                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i class="far fa-paper-plane"></i></span>
                     <div class="newsletter-email-button">
                         <div class="newsletter-email">
-                            <input type="email" id="input-email" class="email-form" placeholder=" " required
-                                title="Enter your email here.">
+                            <input type="email" id="input-email" class="email-form" placeholder=" " required title="Enter your email here.">
                             <label for="input-email" class="label-email">E-mail</label>
                         </div>
-                        <button class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign
-                            Up!</button>
+                        <button aria-label="Sign Up" class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign Up!</button>
                     </div>
                 </div>
             </section>
         </main>
         <footer>
             <div class="footer">
-                <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon
-                    Hyziak</p>
+                <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon Hyziak</p>
                 <p class="social-media-icons">
                     <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook"
                             id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
@@ -133,6 +122,8 @@
 
     <script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
     <script src="../js/single-ink-with-offset.js" defer></script>
+
+	<link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </body>
 
 </html>
