--- a/programmers/ada-lovelace.html
+++ b/programmers/ada-lovelace.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE,Edge=1">
 
-    <meta name="description"
-        content=" Do you know who was an English mathematician and writer known for her work on mechanical general-purpose computer?">
-    <meta name="keywords"
-        content="famous programmers, social media creators, computer designers, cryptographers, biographies">
+    <meta name="description" content=" Do you know who was an English mathematician and writer known for her work on mechanical general-purpose computer?">
+    <meta name="keywords" content="famous programmers, social media creators, computer designers, cryptographers, biographies">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Augusta Ada Lovelace - The Gallery">
@@ -22,8 +20,6 @@
     <link rel="stylesheet" href="../css/subpage-styles.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap"
-        rel="stylesheet">
 
     <!--[if lt IE 9]>
             <script src = "https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity = "sha512-UDJtJXfzfsiPPgnI5S1000FPLBHMhvzAMX15I+qG2E2OAzC9P1JzUwJOfnypXiOH7MRPaqzhPbBGDNNj7zBfoA==" crossorigin = "anonymous"></script>
@@ -40,8 +36,7 @@
                 <nav>
                     <div class="navigation-subpage">
                         <ol class="navigation-subpage-list">
-                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../"
-                                    class="link">Return &emsp;</a></li>
+                            <li class="navigation-subpage-item" id="go-back" tabindex="0"><a href="../" class="link">Return &emsp;</a></li>
                         </ol>
                     </div>
                 </nav>
@@ -58,12 +53,10 @@
                             computer. She was the first to recognise that the machine had applications beyond pure
                             calculation. As a result, she is often regarded as one of the first computer programmers.
                         </p>
-                        <button class="learn-more-btn" id="learn-more">Learn more!</button>
+                        <button aria-label="Learn More" class="learn-more-btn" id="learn-more">Learn more!</button>
                     </div>
-                    <div class="image-container"
-                        title="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer.">
-                        <img src="../img/ada-lovelace.jpg" class="introduction-image"
-                            alt="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer.">
+                    <div class="image-container" title="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer.">
+                        <img src="../img/ada-lovelace.jpg" class="introduction-image" alt="An illustration showing Ada Lovelace in front of a chalkboard. She is looking right at the viewer.">
                     </div>
                 </div>
             </article>
@@ -84,8 +77,7 @@
                     </div>
                     <div class="paragraph">
                         <div title="An illustration of Ada Lovelace.">
-                            <img src="../img/ada-lovelace-2.jpg" alt="An illustration of Ada Lovelace."
-                                class="paragraph-image" tabindex="0">
+                            <img src="../img/ada-lovelace-2.jpg" alt="An illustration of Ada Lovelace." class="paragraph-image" tabindex="0">
                         </div>
                         <p class="paragraph-text" tabindex="0">
                             Privately educated in mathematics and science. The mathematician De Morgan helped her in
@@ -98,16 +90,13 @@
             </article>
             <section>
                 <div class="newsletter" tabindex="0">
-                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i
-                            class="far fa-paper-plane"></i></span>
+                    <span class="newsletter-text">Subscribe to our newsletter! &nbsp; <i class="far fa-paper-plane"></i></span>
                     <div class="newsletter-email-button">
                         <div class="newsletter-email">
-                            <input type="email" id="input-email" class="email-form" placeholder=" " required
-                                title="Enter your email here.">
+                            <input type="email" id="input-email" class="email-form" placeholder=" " required title="Enter your email here.">
                             <label for="input-email" class="label-email">E-mail</label>
                         </div>
-                        <button class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign
-                            Up!</button>
+                        <button aria-label="Sign Up" class="newsletter-btn" type="submit" title="Click to sign up for our newsletter!">Sign Up!</button>
                     </div>
                 </div>
             </section>
@@ -132,6 +121,8 @@
 
     <script src="https://kit.fontawesome.com/d1ae74e7ee.js" crossorigin="anonymous" defer></script>
     <script src="../js/single-ink-with-offset.js" defer></script>
+
+	<link href="https://fonts.googleapis.com/css2?family=Englebert&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </body>
 
 </html>
