Setting the illustration's positioning

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<textarea name="" id="message" cols="25" rows="7" class="form-textarea"></textarea>
 								</div>
 							</form>
-							<div title="Here is a huge question mark. In the foreground there are two men." style="margin: 25px 0 0 50px;">
+							<div title="Here is a huge question mark. In the foreground there are two men." class="illustraion-container">
 								<img src="img/ask-customer-feedback.png" class="illustration-question" alt="Here is a huge question mark. In the foreground there are two men.">
 							</div>
 						</div>
