--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							</div>
 						</div>
 						<button class="form-button" type="submit" title="Submit your form!" aria-label="Submit Your Form">
-							Submit! <span class="message"><i class="far fa-envelope"></i></span>
+							<span style="transform: translate(0, -50%);">Submit!</span> <span class="message"><i class="far fa-envelope"></i></span>
 						</button>
 					</div>
 				</div>
