Deletion of excessive tabindexes

--- a/designers/steve-jobs.html
+++ b/designers/steve-jobs.html
@@ -110,13 +110,13 @@
                 <p class="footer-text" tabindex="0">All rights reserved &emsp; &copy; &emsp; Filip Kubala / Szymon Hyziak</p>
                 <p class="social-media-icons">
                     <a href="https://www.facebook.com/" class="link" target="_blank"><i class="fab fa-facebook"
-                            id="facebook" title="Facebook" tabindex="0"></i></a> &emsp;
+                            id="facebook" title="Facebook"></i></a> &emsp;
                     <a href="https://www.youtube.com/" target="_blank" class="link"><i class="fab fa-youtube"
-                            id="youtube" title="YouTube" tabindex="0"></i></a>&emsp;
+                            id="youtube" title="YouTube"></i></a>&emsp;
                     <a href="https://www.snapchat.com/" target="_blank" class="link"><i class="fab fa-snapchat-ghost"
-                            id="snapchat" title="Snapchat" tabindex="0"></i></a> &emsp;
+                            id="snapchat" title="Snapchat"></i></a> &emsp;
                     <a href="https://pl.linkedin.com/" target="_blank" class="link"><i class="fab fa-linkedin-in"
-                            id="linkedin" title="Linkedin" tabindex="0"></i></a>
+                            id="linkedin" title="Linkedin"></i></a>
                 </p>
             </div>
         </footer>
