Deletion of unnecessary tabindexes

--- a/cryptographers/marian-rejewski.html
+++ b/cryptographers/marian-rejewski.html
@@ -59,7 +59,7 @@
                     <div class="image-container" title="Close view of the Enigma machine.">
                         <img src="../img/enigma.jpg" class="introduction-image" alt="Close view of the Enigma machine.">
                     </div>
-                    <a href="elizabeth-smith-friedman" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
+                    <a href="elizabeth-smith-friedman" class="link"><i class="fas fa-arrow-right"></i></a>
                 </div>
             </article>
             <section>
