--- a/programmers/bill-gates.html
+++ b/programmers/bill-gates.html
@@ -58,7 +58,7 @@
                     <div class="image-container" title="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                         <img src="../img/bill-gates.jpeg" class="introduction-image" alt="Bill Gates looking into space. We can see a reflection of a computer screen in his glasses' lenses.">
                     </div>
-                    <a href="ada-lovelace" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
+                    <a href="ada-lovelace" class="link"><i class="fas fa-arrow-right"></i></a>
                 </div>
             </article>
             <section>
