--- a/social-media-creators/kevin-systrom.html
+++ b/social-media-creators/kevin-systrom.html
@@ -58,7 +58,7 @@
                     <div class="image-container" title="Kevin Systrom in a suit. He is smiling.">
                         <img src="../img/kevin-systrom1.jpg" class="introduction-image" alt="Kevin Systrom in a suit. He is smiling.">
                     </div>
-                    <a href="pichai-sundararajan" class="link"><i class="fas fa-arrow-right" tabindex="0"></i></a>
+                    <a href="pichai-sundararajan" class="link"><i class="fas fa-arrow-right"></i></a>
                 </div>
             </article>
             <section>
