--- a/social-media-creators/pichai-sundararajan.html
+++ b/social-media-creators/pichai-sundararajan.html
@@ -45,7 +45,7 @@
         <main>
             <article>
                 <div class="introduction-container">
-                    <a href="kevin-systrom" class="link"><i class="fas fa-arrow-left" tabindex="0"></i></a>
+                    <a href="kevin-systrom" class="link"><i class="fas fa-arrow-left"></i></a>
                     <div class="introduction-text">
                         <h1 class="introduction-headline" tabindex="0">Pichai Sundararajan </h1>
                         <p class="introduction-paragraph" tabindex="0">
