--- a/cryptographers/elizabeth-smith-friedman.html
+++ b/cryptographers/elizabeth-smith-friedman.html
@@ -46,7 +46,7 @@
         <main>
             <article>
                 <div class="introduction-container">
-                    <a href="marian-rejewski" class="link"><i class="fas fa-arrow-left" tabindex="0"></i></a>
+                    <a href="marian-rejewski" class="link"><i class="fas fa-arrow-left"></i></a>
                     <div class="introduction-text">
                         <h1 class="introduction-headline" tabindex="0">Elizabeth Smith Friedman</h1>
                         <p class="introduction-paragraph" tabindex="0">
