--- a/programmers/ada-lovelace.html
+++ b/programmers/ada-lovelace.html
@@ -45,7 +45,7 @@
         <main>
             <article>
                 <div class="introduction-container">
-                    <a href="bill-gates" class="link"><i class="fas fa-arrow-left" tabindex="0"></i></a>
+                    <a href="bill-gates" class="link"><i class="fas fa-arrow-left"></i></a>
                     <div class="introduction-text">
                         <h1 class="introduction-headline" tabindex="0">Augusta Ada King</h1>
                         <p class="introduction-paragraph" tabindex="0">
